<resources>
    <string name="app_name">Smart Attendance</string>
    <string name="login_logo">Login Logo</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter you password</string>
    <string name="log_in">LOG IN</string>
    <string name="new_user">New User?</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="have_account">Already have an account?</string>
    <string name="registration_logo">Registration Logo</string>
    <string name="Error">Error displaying</string>
</resources>
