<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LogInPage">

    <ImageView
        android:contentDescription="@string/login_logo"
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="85dp"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:layout_marginBottom="419dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/login_logo" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="381dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="320dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="383dp"
        android:layout_height="57dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="233dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterEmail" />

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="374dp"
        android:layout_height="49dp"
        android:layout_marginStart="167dp"
        android:layout_marginLeft="167dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="167dp"
        android:layout_marginRight="167dp"
        android:layout_marginBottom="147dp"
        android:background="@drawable/custom_button"
        android:ellipsize="none"
        android:text="@string/log_in"
        android:textStyle="normal|bold"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword" />

    <TextView
        android:id="@+id/newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="323dp"
        android:layout_marginLeft="323dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="19dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/new_user"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        android:textColor="@drawable/text_link_color"
        app:layout_constraintBottom_toTopOf="@+id/btn_signIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPassword"
        app:layout_constraintVertical_bias="0.0"
        android:onClick="goToRegistration"/>

    <ProgressBar
        android:id="@+id/loginProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginLeft="181dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="182dp"
        android:layout_marginRight="182dp"
        android:layout_marginBottom="57dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signIn"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>